    on the same connection (i.e. multiple PostgreSQL-portal-support),
    automatic precompilation and caching of often-used
    long-compile-time-needing queries, extended columndescriptions,
    accurate error messages under all circumstances, SSL-support,
    SQL-injection protection since it will ignore everything after the
    first semicolon terminating the first command in the query.

    Performance tuned, with the helperclass _PGsql.PGsql it currently
    is around 21% faster than the old libpq based Postgres driver
    for smaller queries; for large bytea blobs and large texts, it
    speeds up even more.

  FIXME: mysql

o SSL

  FIXME: client certificates: examples?

o Standards.IIM

  Some bugfixes in parsing Photoshop headers and DOS EPS Binary
  Headers.

o Standards.ISO639_2

  Updated with the latest ISO639-2 languages.

o Standards.URI

  - Updated to conform to RFC 3986.

  - Added methods get_query_variables(), set_query_variables(),
    add_query_variable() and add_query_variables() to give a better
    API to to handle query variables.

  - The new method get_http_query() returns the query part and
    get_http_path_query() returns both the path and the query, both
    coded according to RFC 1738.

o Standards.UUID

  - Added support for UUID version 5; name based with SHA hash, which
    can be generated from the make_version5 function.

  - An UUID object can now be used as namespace in the second argument
    to make_version3 as well as the new make_version5.

o Standards.XML.Wix

  FIXME

o Stdio

  - Stdio.cp can now work recursively in a directory tree. It will
    also keep the permissions of files it copies.

  - Added Stdio.recursive_mv which works on every OS and also when the
    destination isn't on the same filesystem as the source.

  - Added more symbolc default termcap/terminfo bindings to
    Stdio.Readline.

  - Improved support for Terminfo on NetBSD.

  - read_file(), read_bytes(), write_file() and append_file() will may